# meet

./: .gitignore  .gitlint  .sops.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  index.yaml  livekit-egress.yaml  meet-0.0.1.tgz  meet-0.0.2.tgz  meet-0.0.3.tgz  renovate.json
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: crowdin-download.yml  deploy.yml  docker-hub.yml  helmfile-linter.yml  meet.yml  release-helm-chart.yaml
crowdin/: config.yml
docker/auth/: realm.json
docker/livekit/config/: livekit-egress.yaml  livekit-server.yaml
docker/livekit/egress-example/: room-composite-file.json
docs/: egress.md  installation.md  release.md  tsclient.md
docs/examples/: keycloak.values.yaml  livekit.values.yaml  meet.values.yaml  postgresql.values.yaml  redis.values.yaml
env.d/development/: common.dist  crowdin.dist  kc_postgresql.dist  postgresql.dist
src/backend/: .pylintrc  MANIFEST.in  manage.py  pyproject.toml  setup.py  wip.json  wip.py
src/backend/core/: admin.py  analytics.py  apps.py  factories.py  models.py  urls.py  utils.py
src/backend/core/api/: __init__.py  demo.py  permissions.py  serializers.py  viewsets.py
src/backend/core/authentication/: backends.py  views.py
src/backend/core/migrations/: 0001_initial.py  0003_alter_room_configuration.py  0003_resource_remove_documentaccess_document_and_more.py  0004_alter_user_language.py  0005_alter_user_language_recording.py  0005_recording_recordingaccess_and_more.py  0006_merge_duplicate_users.py  0006_remove_recording_unique_active_recording_per_room_and_more.py  0007_recording_mode.py  0008_user_full_name_user_short_name.py  0009_alter_recording_status.py  0010_alter_resourceaccess_options_alter_user_options.py  0011_room_pin_code.py  0012_generate_room_pin_code.py
src/backend/core/recording/: __init__.py  exceptions.py  storage.py  worker.py
src/backend/core/recording/event/: __init__.py  authentication.py  authentification.py  exceptions.py  notification.py  parsers.py
src/backend/core/recording/worker/: __init__.py  exceptions.py  factories.py  mediator.py  services.py
src/backend/core/services/: marketing_service.py
src/backend/core/tests/: conftest.py  test_analytics.py  test_api_resource_accesses.py  test_api_users.py  test_model_recording.py  test_models_recording.py  test_models_recording_accesses.py  test_models_resource_accesses.py  test_models_rooms.py  test_models_users.py
src/backend/core/tests/authentication/: test_backends.py  test_views.py
src/backend/core/tests/recording/: test_api_recordings_delete.py  test_api_recordings_list.py  test_api_recordings_storage_hook.py
src/backend/core/tests/recording/event/: test_authentication.py  test_parsers.py
src/backend/core/tests/recording/worker/: test_factories.py  test_mediator.py  test_services.py
src/backend/core/tests/recordings/: test_api_recordings_delete.py  test_api_recordings_list.py  test_api_recordings_retrieve_auth.py  test_api_recordings_stop.py
src/backend/core/tests/rooms/: test_api_room_start_recording.py  test_api_room_stop_recording.py  test_api_rooms_create.py  test_api_rooms_delete.py  test_api_rooms_list.py  test_api_rooms_retrieve.py  test_api_rooms_start_recording.py  test_api_rooms_stop_recording.py  test_api_rooms_update.py
src/backend/core/tests/services/: test_marketing_service.py
src/backend/demo/management/commands/: create_demo.py
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/impress/: settings.py
src/backend/locale/en_US/LC_MESSAGES/: django.po
src/backend/meet/: celery_app.py  settings.py  urls.py  wsgi.py
src/data/: dockerfile
src/data/transcribe/: pyproject.toml
src/data/transcribe/transcribe/: __init__.py  api.py  conf.py  health.py  main.py
src/frontend/: .env.development  .eslintrc.cjs  .gitignore  Dockerfile  default.conf  i18next-parser.config.json  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1733497358501-5fe61e2bccfc1.mjs
src/frontend/@types/: react-query.d.ts
src/frontend/src/: App.tsx  routes.ts  vite-env.d.ts
src/frontend/src/api/: ApiError.ts  ApiRoom.ts  apiUrl.ts  fetchApi.ts  fetchRoom.ts  fetchUser.ts  queryKeys.ts  useConfig.ts
src/frontend/src/assets/: VisioIcon.tsx
src/frontend/src/components/: AppInitialization.tsx  Avatar.tsx  BackToHome.tsx  DelayedRender.ts  ErrorScreen.tsx  Feedback.tsx  FeedbackBanner.tsx  LoadingScreen.tsx  NotFoundScreen.tsx  ProConnectButton.tsx  QueryAware.tsx  SoundTester.tsx
src/frontend/src/hooks/: useSyncAfterDelay.ts
src/frontend/src/i18n/: LanguageSelector.tsx  init.ts  useLanguageLabels.ts
src/frontend/src/layout/: Box.tsx  BoxScreen.tsx  Centered.tsx  CenteredContent.tsx  ErrorScreen.tsx  Footer.tsx  ForbiddenScreen.tsx  Header.tsx  Layout.tsx  LoadingScreen.tsx  NotFoundScreen.tsx  QueryAware.tsx  Screen.tsx
src/frontend/src/navigation/: getRouteByName.ts  getRoutePath.ts  getRouteUrl.ts  navigateTo.ts  navigateToHome.ts  useMatchesRoute.ts
src/frontend/src/primitives/: A.tsx  AlertDialog.tsx  Badge.tsx  Bold.tsx  Box.tsx  Button.tsx  Checkbox.tsx  Dialog.tsx  DialogContainer.tsx  DialogContent.tsx  Div.tsx  Field.tsx  FieldDescription.tsx  FieldErrors.tsx  Form.tsx  (+31 more)
src/frontend/visio/: package-lock.json  package.json
src/helm/: helmfile.yaml
src/helm/impress/: README.md  values.yaml
src/helm/meet/: Chart.yaml  README.md  generate-readme.sh  values.yaml
src/mail/: package-lock.json  package.json
src/mail/mjml/: invitation.mjml  summary.mjml
src/sdk/: package-lock.json  package.json
src/sdk/consumer/: index.html  package-lock.json  package.json
src/summary/: Dockerfile  compose.yaml  pyproject.toml
src/summary/summary/: __init__.py  celery_worker.py  config.py  main.py  prompt.py  security.py
src/summary/summary/api/: __init__.py  health.py  main.py
src/summary/summary/api/route/: __init__.py  tasks.py
src/summary/summary/core/: __init__.py  celery_worker.py  config.py  prompt.py
src/tsclient/: package.json
(+255 files in other folders)
